fix: readable-line option limits inline-editor width

--- a/src/styles/makdown/inline-editor.css
+++ b/src/styles/makdown/inline-editor.css
@@ -17,4 +17,6 @@
     & .cm-contentContainer div {
         padding-bottom: 0 !important;
     }
+
+    --file-line-width: 100%;
 }
